GNOME Bugzilla – Bug 753552
codecparsers: h265: Fix the parsing of slice header when there is a modification in reference picture lists
Last modified: 2015-09-10 16:18:05 UTC
Created attachment 309121 [details] [review] codecparser: h265: Fix the parsing of ref_pic_lists_modification Fix the parsing of ref_pic_lists_modification in slice header.
Created attachment 309140 [details] [review] codecparsers: h265: Fix the range of delta_chroma_log2_weight_denom This will fix the parsing of streams having negative delta_chroma_loeg2_weight_denom values. ChromaLog2WeightDenom = luma_log2_weight_denom + delta_chroma_log2_weight_denom The value of ChromaLog2WeightDenom should be in the range of 0 to 7 and the value luma_log2_weight_denom should be also in the range of 0 to 7. Which means , delta_chroma_log2_weight_denom can have values in the range between -7 and 7.
commit 8a6cc4ed27dfc596c75b43ffe6eda36fcbd03781 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Wed Aug 12 07:58:09 2015 +0300 codecparsers: h265: Fix the range of delta_chroma_log2_weight_denom ChromaLog2WeightDenom = luma_log2_weight_denom + delta_chroma_log2_weight_denom The value of ChromaLog2WeightDenom should be in the range of 0 to 7 and the value luma_log2_weight_denom should be also in the range of 0 to 7. Which means , delta_chroma_log2_weight_denom can have values in the range between -7 and 7. https://bugzilla.gnome.org/show_bug.cgi?id=753552 commit b6b2e045010d60033df61f74046337e70efbe907 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Wed Aug 12 05:11:27 2015 +0300 codecparsers: h265: Fix the parsing of ref_pic_lists_modification https://bugzilla.gnome.org/show_bug.cgi?id=753552