codecparsers: h265: Fix the parsing of ref_pic_lists_modification

https://bugzilla.gnome.org/show_bug.cgi?id=753552